--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -195,7 +195,7 @@ body {
 
 .container {
     /* border: 1px solid #000; */
-    width: 1200px;
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-right: auto;
@@ -203,7 +203,7 @@ body {
 }    
 
 .container-hero {
-    min-width: 1200px;
+    max-width: 1200px;
 
 }
 
@@ -383,7 +383,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-    url(/img/Header\ img.jpg);
+    url(/img/Header.jpg);
     
     background-repeat: no-repeat;
     background-size: cover;
@@ -457,8 +457,8 @@ body {
     font-weight: bold;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;;
+    letter-spacing: 0.03em; 
+    color: var(--primary-white-color)
 }
 
 .footer-text {
@@ -540,7 +540,26 @@ body {
     margin-right: 10px;
 }
 
+.subscribe {
+    font-size: 16px;
+    line-height: 1.87;
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    letter-spacing: 0.06em; 
+    color: #FFFFFF;
+    padding: 10px 29px;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
 
+}
+
+.icon-send {
+    margin-left: 10px;
+}
 
 
 /* Portfolio */
