--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -416,7 +416,8 @@ body {
     max-width: 1600px;
     margin-right: auto;
     margin-left: auto;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(/img/Header.jpg);    
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+    url(../img/Header.jpg);    
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -673,6 +674,7 @@ body {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
+    border: 1px solid transparent;
    
 }
 
@@ -688,6 +690,7 @@ body {
     border: 1px solid #EEEEEE;
     box-sizing: border-box;
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-portfolio-list {
@@ -741,6 +744,7 @@ body {
 .portfolio-element:hover .overlay-text{
     opacity: 1;
     transform: translateY(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-show {
