--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -675,6 +675,7 @@ body {
     margin-right: 30px;
     margin-bottom: 30px;
     border: 1px solid transparent;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 
@@ -753,35 +754,6 @@ body {
 }
 
 
-/* ********Модальное окно******** */
-
-.backdrop {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
-}
-
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-}
-
-
-.modal {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 528px;
-    min-height: 581px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-}
-
 
 
 
@@ -832,3 +804,80 @@ body {
   }
 
 
+/* *********Всплывающее окно********** */
+/* ********Модальное окно******** */
+
+/* .backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+
+.modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 528px;
+    min-height: 581px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+} */
+
+/* ///////////////////////////// */
+
+.modal p{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--title-text-color);
+}
+
+
+.form-field {
+    position: relative;
+    margin-bottom: 28px;
+}
+
+.form-modal {
+    margin: 0px 40px 40px;
+    width: 448px;
+  }
+
+.form-input {
+    width: 100%;
+    margin: 0;
+    padding: 12px 18px;
+    padding-left: 42px;
+    font: inherit;
+    
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+} 
+
+textarea {
+    position: relative;
+    resize: none;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    font: inherit;
+    width: 100%;
+    margin-bottom: 20px;
+  }
