--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -804,10 +804,10 @@ body {
   }
 
 
-/* *********Всплывающее окно********** */
+
 /* ********Модальное окно******** */
 
-/* .backdrop {
+.backdrop {
     position: fixed;
     left: 0;
     top: 0;
@@ -821,6 +821,29 @@ body {
     pointer-events: none;
 }
 
+.button-close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background: var(--primary-white-color);
+    fill: var(--primary-text-color);
+    top: 8px;
+    right: 8px;
+}
+
+.button-close:hover,
+.button-close:focus{
+    fill: var(--accent-color);
+    background: var(--primary-white-color);
+  }
+
+
+.icon-close {
+    fill: var(--primary-text-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50px;
+}
+
 
 .modal {
     position: absolute;
@@ -832,9 +855,8 @@ body {
     background-color: #FFFFFF;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-} */
+}
 
-/* ///////////////////////////// */
 
 .modal p{
     font-family: Roboto;
@@ -844,6 +866,8 @@ body {
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 30px;
+    padding-top: 40px;
 
     color: var(--title-text-color);
 }
@@ -870,6 +894,54 @@ body {
     border-radius: 4px;
 } 
 
+.form-label {
+    position: absolute;
+    top: 50%;
+    left: 40px;
+    transform: translate(0, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .form-label-comment {
+    position: absolute;
+    top: 15%;
+    left: 40px;
+    transform: translate(0, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .form-input:focus + .form-label,
+  .form-input:not(:placeholder-shown) + .form-label {
+    color: var(--accent-color);
+    transform: translate(-25px, -40px);
+  }
+
+  textarea:focus ~ .form-label-comment,
+  textarea:not(:placeholder-shown) ~ .form-label-comment {
+    color: var(--accent-color);
+    transform: translate(-25px, -40px);
+  }
+
+  .form-input:focus,
+  textarea:focus {
+    border: 1px solid var(--accent-color);
+    outline: none;
+  }
+
+  .form-icon{
+    position: absolute;
+    top: 50%;
+    left: 19px;
+    transform: translateY(-50%);
+    display: inline-block;
+    fill: var(--title-text-color);
+  }
+
+  .form-input:focus ~ .form-icon {
+    fill: var(--accent-color);
+  }
+
+
 textarea {
     position: relative;
     resize: none;
@@ -879,5 +951,25 @@ textarea {
     padding: 12px 16px;
     font: inherit;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
   }
+
+
+.button-submit {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.circs{
+    margin-left: 4px;
+    color: var(--accent-color);
+    text-decoration: underline;
+}
+
+
+.modal-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
