--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -738,11 +738,12 @@ body {
     background-color: rgba(33, 150, 243, 0.9);
     opacity: 0;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.portfolio-element:hover .overlay-text{
+.portfolio-element:hover .overlay-text,
+.portfolio-element:focus .overlay-text{
     opacity: 1;
     transform: translateY(0);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
