--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -817,32 +817,32 @@ body {
     background: rgba(0, 0, 0, 0.2);
 }
 
-.backdrop.is-hidden {
+/* .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
-}
+} */
 
 .button-close {
     position: absolute;
     width: 30px;
     height: 30px;
     background: var(--primary-white-color);
-    fill: var(--primary-text-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     top: 8px;
     right: 8px;
+    border-radius: 50px;
+   
 }
 
-.button-close:hover,
-.button-close:focus{
+.icon-close:hover,
+.icon-close:focus{
     fill: var(--accent-color);
     background: var(--primary-white-color);
   }
 
 
 .icon-close {
-    fill: var(--primary-text-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50px;
+    fill: #000000;
 }
 
 
